--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,3 +1,8 @@
+/* start variables */
+:root {
+    --main-color: #19c8fa;
+}
+/* end variables */
 /* start global rules */
 * {
     box-sizing: border-box;
@@ -59,15 +64,16 @@ header .logo:active {
 }
 
 header .logo {
-    --logo-color: #00c7fc;
+    margin-bottom: 10px;
+    --logo-color: var(--main-color);
     --tr-color: white;
     display: flex;
 
 }
 
 header .logo .head {
-    margin-top: 10px;
     position: relative;
+    margin-top: 6px;
     background-color: var(--logo-color);
     width: 35px;
     height: 40px;
@@ -90,7 +96,7 @@ header .logo .head p {
     position: absolute;
     border: 5px solid ;
     border-color: #ff00 #ff00 var(--tr-color) #ff00;
-    bottom: 0.5px;
+    bottom: 0px;
 }
 header .logo .head p:nth-child(2){
     left: 12px;
@@ -100,19 +106,20 @@ header .logo .head p:nth-child(3){
 }
 
 header .logo .logo-title {
-    margin-top: 20px;
-    margin-left: 10px;
+    margin-top: 15px;
+    margin-left: 5px;
 }
 header .logo .logo-title h3 {
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-weight: 700;
-    font-size: 20px;
-    font-family: 'Oleo Script Swash Caps', cursive;
+    font-size: 25px;
+    font-family: 'Lily Script One', cursive;
 }
 
 header .logo .logo-title p {
     color: var(--logo-color);
     margin-left: 30px;
+    margin-bottom: -5px;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 8px;
@@ -122,11 +129,109 @@ header .logo .logo-title p {
 
 /* start header */
 header {
-
+    position: absolute;
+    left: 0;
+    width: 100%;
+    z-index: 2;
 }
+
 header .container {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-height: 98px;
+}
+
+header .container::before {
+    position: absolute;
+    content: "";
+    height: 2px;
+    background-color: #111;
+    bottom: 0;
+    left: 15px;
+    width: calc(100% - 30px);
+}
+
+header nav {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end
+}
+
+header nav .my-menu {
+    color: #111;
+    font-size: 25px;
+}
+
+@media (min-width: 786px){
+    header nav .my-menu {
+        display: none;
+    }
+}
+
+header nav ul {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 786px) {
+    header nav ul {
+        display: none;
+    }
+
+    header nav .my-menu:hover + ul {
+    display: flex;
+    align-items: stretch;
+    position: absolute;
+    flex-direction: column;
+    background-color: rgba(17, 17, 17, 0.5);
+    width: 100%;
+    top: calc(100% + 1px);
+    left: 0;
+    }
+
+    /* header nav .my-menu:hover + ul li a {
+    padding: 20px 10px;
+    } */
+    /* or */
+    header nav ul li a {
+    padding: 20px 10px !important;
+    }
+}
+
+header nav ul li a {
+    padding: 40px 10px;
+    display: block;
+    color: #222;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 14px;
+    transition: 0.3s;
+    position: relative;
+    z-index: 3;
+}
+
+header nav ul li a.active,
+header nav ul li a:hover {
+    color: var(--main-color);
+    border-bottom: 2px solid var(--main-color)
+}
+
+header .form {
+    position: relative;
+    width: 60px;
+    height: 30px;
+    margin-left: 30px;
+    border-left: 2px solid #111
+}
+header .form i {
+    color: var(--main-color);
+    position: absolute;
+    font-size: 30px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-30%, -50%)
 }
 /* end header */
